added jest tests, some fixes

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "btb-task": {
+    "b2b-task": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/btb-task",
+            "outputPath": "dist/b2b-task",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -66,10 +66,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "btb-task:build:production"
+              "browserTarget": "b2b-task:build:production"
             },
             "development": {
-              "browserTarget": "btb-task:build:development"
+              "browserTarget": "b2b-task:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -77,7 +77,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "btb-task:build"
+            "browserTarget": "b2b-task:build"
           }
         },
         "test": {
