--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "btb-task",
+  "name": "b2b-task",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "set NODE_OPTIONS='--experimental-vm-modules' && jest --updateSnapshot",
+    "test:watch": "jest --watchAll"
   },
   "private": true,
   "dependencies": {
@@ -26,13 +27,17 @@
     "@angular-devkit/build-angular": "^15.2.9",
     "@angular/cli": "~15.2.9",
     "@angular/compiler-cli": "^15.2.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "@types/jest": "^29.5.5",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^13.1.2",
+    "ts-jest": "^29.1.1",
     "typescript": "~4.9.4"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "./src/setup.jest.ts"
+    ],
+    "globalSetup": "jest-preset-angular/global-setup"
   }
 }
